linkとscriptの読み込み

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <div class="contents">
         <div class="accounts">
             <span class="account-item">Links: </span>
-            <span class="account-item">Twitter | </span>
-            <span class="account-item">Github</span>
+            <span class="account-item"><a href="https://twitter.com/taarusauce">Twitter</a></span>
+            <span class="account-item"><a href="https://github.com/tarugrimoire">Github</a></span>
         </div>
         <div class="writeups">
             <p class="writeup">Example CTF [Nov 2020]</p>
@@ -30,6 +30,6 @@
             <p>この先工事中</p>
         </div>
     </div>
-
 </body>
+<script src="./script.js"></script>
 </html>
