--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="accounts">
             <span class="account-item">Links: </span>
             <span class="account-item"><a href="https://twitter.com/taarusauce">Twitter</a></span>
-            <span class="account-item"><a href="https://github.com/tarugrimoire">Github</a></span>
+            <span class="account-item"><a href="https://github.com/tarugrimoire">GitHub</a></span>
         </div>
         <div class="writeups">
         </div>
